analyseurXML-CPP/xml.output
Terminals which are not used

   CLOSESPECIAL
   ENCODING
   STARTSPECIAL


Grammar

    0 $accept: document $end

    1 document: declarations_opt xml_element misc_seq_opt

    2 misc_seq_opt: misc_seq_opt comment
    3             | /* empty */

    4 comment: COMMENT

    5 declarations_opt: declaration
    6                 | /* empty */

    7 declaration: DOCTYPE IDENT IDENT STRING CLOSE

    8 xml_element: start attribute_opt empty_or_content

    9 start: START
   10      | NSSTART

   11 attribute_opt: attribute_opt attribute
   12              | /* empty */

   13 attribute: IDENT EQ STRING
   14          | NSIDENT EQ STRING

   15 empty_or_content: SLASH CLOSE
   16                 | close_content_and_end CLOSE

   17 close_content_and_end: CLOSE content_opt END
   18                      | CLOSE content_opt NSEND

   19 content_opt: content_opt DATA
   20            | content_opt comment
   21            | content_opt xml_element
   22            | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
EQ (258) 13 14
SLASH (259) 15
CLOSE (260) 7 15 16 17 18
CLOSESPECIAL (261)
DOCTYPE (262) 7
ENCODING (263)
STRING (264) 7 13 14
DATA (265) 19
COMMENT (266) 4
IDENT (267) 7 13
NSIDENT (268) 14
NSSTART (269) 10
START (270) 9
STARTSPECIAL (271)
END (272) 17
NSEND (273) 18


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
document (20)
    on left: 1, on right: 0
misc_seq_opt (21)
    on left: 2 3, on right: 1 2
comment (22)
    on left: 4, on right: 2 20
declarations_opt (23)
    on left: 5 6, on right: 1
declaration (24)
    on left: 7, on right: 5
xml_element (25)
    on left: 8, on right: 1 21
start (26)
    on left: 9 10, on right: 8
attribute_opt (27)
    on left: 11 12, on right: 8 11
attribute (28)
    on left: 13 14, on right: 11
empty_or_content (29)
    on left: 15 16, on right: 8
close_content_and_end (30)
    on left: 17 18, on right: 16
content_opt (31)
    on left: 19 20 21 22, on right: 17 18 19 20 21


state 0

    0 $accept: . document $end

    DOCTYPE  shift, and go to state 1

    $default  reduce using rule 6 (declarations_opt)

    document          go to state 2
    declarations_opt  go to state 3
    declaration       go to state 4


state 1

    7 declaration: DOCTYPE . IDENT IDENT STRING CLOSE

    IDENT  shift, and go to state 5


state 2

    0 $accept: document . $end

    $end  shift, and go to state 6


state 3

    1 document: declarations_opt . xml_element misc_seq_opt

    NSSTART  shift, and go to state 7
    START    shift, and go to state 8

    xml_element  go to state 9
    start        go to state 10


state 4

    5 declarations_opt: declaration .

    $default  reduce using rule 5 (declarations_opt)


state 5

    7 declaration: DOCTYPE IDENT . IDENT STRING CLOSE

    IDENT  shift, and go to state 11


state 6

    0 $accept: document $end .

    $default  accept


state 7

   10 start: NSSTART .

    $default  reduce using rule 10 (start)


state 8

    9 start: START .

    $default  reduce using rule 9 (start)


state 9

    1 document: declarations_opt xml_element . misc_seq_opt

    $default  reduce using rule 3 (misc_seq_opt)

    misc_seq_opt  go to state 12


state 10

    8 xml_element: start . attribute_opt empty_or_content

    $default  reduce using rule 12 (attribute_opt)

    attribute_opt  go to state 13


state 11

    7 declaration: DOCTYPE IDENT IDENT . STRING CLOSE

    STRING  shift, and go to state 14


state 12

    1 document: declarations_opt xml_element misc_seq_opt .
    2 misc_seq_opt: misc_seq_opt . comment

    COMMENT  shift, and go to state 15

    $default  reduce using rule 1 (document)

    comment  go to state 16


state 13

    8 xml_element: start attribute_opt . empty_or_content
   11 attribute_opt: attribute_opt . attribute

    SLASH    shift, and go to state 17
    CLOSE    shift, and go to state 18
    IDENT    shift, and go to state 19
    NSIDENT  shift, and go to state 20

    attribute              go to state 21
    empty_or_content       go to state 22
    close_content_and_end  go to state 23


state 14

    7 declaration: DOCTYPE IDENT IDENT STRING . CLOSE

    CLOSE  shift, and go to state 24


state 15

    4 comment: COMMENT .

    $default  reduce using rule 4 (comment)


state 16

    2 misc_seq_opt: misc_seq_opt comment .

    $default  reduce using rule 2 (misc_seq_opt)


state 17

   15 empty_or_content: SLASH . CLOSE

    CLOSE  shift, and go to state 25


state 18

   17 close_content_and_end: CLOSE . content_opt END
   18                      | CLOSE . content_opt NSEND

    $default  reduce using rule 22 (content_opt)

    content_opt  go to state 26


state 19

   13 attribute: IDENT . EQ STRING

    EQ  shift, and go to state 27


state 20

   14 attribute: NSIDENT . EQ STRING

    EQ  shift, and go to state 28


state 21

   11 attribute_opt: attribute_opt attribute .

    $default  reduce using rule 11 (attribute_opt)


state 22

    8 xml_element: start attribute_opt empty_or_content .

    $default  reduce using rule 8 (xml_element)


state 23

   16 empty_or_content: close_content_and_end . CLOSE

    CLOSE  shift, and go to state 29


state 24

    7 declaration: DOCTYPE IDENT IDENT STRING CLOSE .

    $default  reduce using rule 7 (declaration)


state 25

   15 empty_or_content: SLASH CLOSE .

    $default  reduce using rule 15 (empty_or_content)


state 26

   17 close_content_and_end: CLOSE content_opt . END
   18                      | CLOSE content_opt . NSEND
   19 content_opt: content_opt . DATA
   20            | content_opt . comment
   21            | content_opt . xml_element

    DATA     shift, and go to state 30
    COMMENT  shift, and go to state 15
    NSSTART  shift, and go to state 7
    START    shift, and go to state 8
    END      shift, and go to state 31
    NSEND    shift, and go to state 32

    comment      go to state 33
    xml_element  go to state 34
    start        go to state 10


state 27

   13 attribute: IDENT EQ . STRING

    STRING  shift, and go to state 35


state 28

   14 attribute: NSIDENT EQ . STRING

    STRING  shift, and go to state 36


state 29

   16 empty_or_content: close_content_and_end CLOSE .

    $default  reduce using rule 16 (empty_or_content)


state 30

   19 content_opt: content_opt DATA .

    $default  reduce using rule 19 (content_opt)


state 31

   17 close_content_and_end: CLOSE content_opt END .

    $default  reduce using rule 17 (close_content_and_end)


state 32

   18 close_content_and_end: CLOSE content_opt NSEND .

    $default  reduce using rule 18 (close_content_and_end)


state 33

   20 content_opt: content_opt comment .

    $default  reduce using rule 20 (content_opt)


state 34

   21 content_opt: content_opt xml_element .

    $default  reduce using rule 21 (content_opt)


state 35

   13 attribute: IDENT EQ STRING .

    $default  reduce using rule 13 (attribute)


state 36

   14 attribute: NSIDENT EQ STRING .

    $default  reduce using rule 14 (attribute)
